# books-scraper

./: .gitignore  LICENSE  README.md  main.py  pagination.py  pyproject.toml  requirements.txt  scraper.py  storage.py
scraper/: config.py  http_client.py  main.py  pagination.py  parser.py  product.py  runner.py  storage.py
