[project]
name = "python-scraper"
version = "0.1.0"
description = "Async web scraper using httpx and selectolax"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Matheus Roichman" }
]

dependencies = [
    "httpx>=0.27",
    "selectolax>=0.3",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
lint.select = ["E", "F", "W", "I"]
lint.ignore = []

[tool.ruff.lint.isort]
known-first-party = ["scraper"]

[tool.mypy]
python_version = "3.10"
strict = false
